[package]
name = "malik_sum"
version = "0.1.6"
authors = ["Mohammad Inzamam Malik <malikasinger@gmail.com>"]
edition = "2018"
description = "some description"
license = "MIT"
repository = "https://github.com/malikasinger1/malik_sum"
documentation = "https://github.com/malikasinger1/malik_sum"
homepage = "https://github.com/malikasinger1/malik_sum"
readme = "README.md"



[dependencies]
